created model, controller and api for solicitudes
